          (10)optimize function ISP_eraseByte
          (11)rename member of enumeration type TIM_function, TIM2_function and RST_bootarea
          (12)fix fatal bug in function TIM_INT_setPriority

>Version :v1.0.4
 Alias   :
 Date    :2019-03-03
 Note    :(1)fix header file include bug in util.c
          (2)optimize maxTick into macro definition TIM2_MAXTICK in tim2.h
          (3)fix bug of function UART_INT_setPriority in uart.c
          (4)provide bit operation function
          (5)add new example exti-interruptPriority.c

>Version :v1.0.5
 Alias   :
 Date    :2019-04-09
 Note    :(1)adjust coding style of example files
          (2)optimize bit operation function
          (3)rename log.txt as ChangeLog
          (4)add AUTHORS file
          (5)fix bug about CONFB in bit.h

>Version :v1.1.0
 Alias   :
 Date    :2019-08-03
 Note    :(1)update example file of ISP
          (2)delete abolished header file intrasm.h
          (3)move file LICENSE to root path of project
          (4)update Makefile
            - update Makefile to v0.2.1: refactor all code, optimize effect of print; improve speed of clean operation; fix problem that user can't set job server during execute rebuild operation;  support incremental compilation; support compiling custom source file;
            - update Makefile to v0.2.2: fix bug of rebuild function
            - update Makefile to v0.2.3: fix fatal bug of custom source file
            - update Makefile to v0.2.4: fix fatal bug about build error when pass a absolute path  or relative path
          (5)rename function WDT_clear as WDT_feed
          (6)add version.h for HML version information
          (7)rename enumeration INTR_priority as UTIL_interruptPriority and move it to util.h
          (8)move stc89.h to inc/hw

>Version :v1.1.1
 Alias   :
 Date    :
 Note    :(1)rename all examples
          (2)fix bugs in examples because of changes from HML interface(GPIO_configBitValue)