@@ -5,13 +5,16 @@
     User need to specify a frequency value of extern crystal oscillator via macro.
 
  - 0x02
-    HML get a invalid MCU model because it's unkonw or unsupported.
+    HML get a invalid MCU model because it's unknown or unsupported.
 
  - 0x03
     User need to specify a model of the MCU manually.
 
  - 0x04
-    User need to enable compile macro__CONF_COMPILE_TIM, __CONF_COMPILE_TIM2  in conf.h at the same time, it will make sure source code of UART part can be compiled successfully.
+    User enable macro __CONF_COMPILE_ISP, but current MCU model doesn't support ISP function.
 
  - 0x05
-    User need update thier own SDCC tool-chain, because HML_FwLib_STC89 requires v3.6.0 or later version.
+    User need to enable compile macro__CONF_COMPILE_TIM, __CONF_COMPILE_TIM2  in conf.h at the same time, it will make sure source code of UART part can be compiled successfully.
+
+ - 0x06
+    User need update their own SDCC tool-chain, because HML_FwLib_STC89 requires v3.6.0 or later version.
